--- a/jboss-eap-7.1/pom.xml
+++ b/jboss-eap-7.1/pom.xml
@@ -52,6 +52,7 @@
         <!-- the API for JSON-P (javax.json:javax.json-api) is included in javax.json-1.0.4.redhat-1.jar -->
         <glassfish.javax.json.version>1.0.4.redhat-1</glassfish.javax.json.version>
         <jackson-2-version>2.8.11.redhat-1</jackson-2-version>
+        <jackson-bom.version>2.8.11.redhat-1</jackson-bom.version>
         <!-- note: pay attention if you're using infinispan-jcache, there's no xxx-redhat-1 version of it -->
         <infinispan.version>8.2.11.Final-redhat-1</infinispan.version>
         <woodstox.version>5.0.3.redhat-1</woodstox.version>
@@ -99,6 +100,15 @@
                 <type>pom</type>
             </dependency>
 
+            <!-- Jackson BOM -->
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>${jackson-bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- this is not in the BOM -->
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
@@ -131,12 +141,10 @@
                 <dependency>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-core</artifactId>
-                    <version>${jackson-2-version}</version>
                 </dependency>
                 <dependency>
                     <groupId>com.fasterxml.jackson.datatype</groupId>
                     <artifactId>jackson-datatype-jsr310</artifactId>
-                    <version>${jackson-2-version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
