--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,10 @@
 
     <modules>
         <module>jboss-eap-7.1</module>
-        <module>quarkus</module>
         <module>quarkus-1.3</module>
         <module>quarkus-1.4</module>
-        <module>thorntail-2.2</module>
-        <module>thorntail-2.3</module>
+        <module>quarkus-1.5</module>
         <module>thorntail-2.4</module>
-        <module>wildfly-15</module>
-        <module>wildfly-16</module>
         <module>wildfly-17</module>
         <module>wildfly-18</module>
         <module>wildfly-19</module>
@@ -87,7 +83,7 @@
         <jacoco.plugin.version>0.8.5</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
         <openapi-generator.plugin.version>4.3.1</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.19</swagger-codegen.plugin.version>
+        <swagger-codegen.plugin.version>3.0.20</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
 
@@ -142,7 +138,7 @@
         <hamcrest.version>2.2</hamcrest.version>
         <mockito.version>3.3.3</mockito.version>
         <byte-buddy.version>1.10.10</byte-buddy.version>
-        <equalsverifier.version>3.1.13</equalsverifier.version>
+        <equalsverifier.version>3.3</equalsverifier.version>
         <json.unit.version>2.17.0</json.unit.version>
         <restassured.version>4.3.0</restassured.version>
         <wiremock.version>2.26.3</wiremock.version>
