--- a/thorntail-2.4/pom.xml
+++ b/thorntail-2.4/pom.xml
@@ -168,6 +168,12 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-fault-tolerance</artifactId>
                     <version>${smallrye.fault-tolerance.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>commons-logging</groupId>
+                            <artifactId>commons-logging</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -188,6 +194,12 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-open-api</artifactId>
                     <version>${smallrye.openapi.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>commons-logging</groupId>
+                            <artifactId>commons-logging</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
