--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,15 @@
 
     <modules>
         <module>jboss-eap-7.1</module>
-        <module>quarkus-1.3</module>
-        <module>quarkus-1.4</module>
         <module>quarkus-1.5</module>
+        <module>quarkus-1.6</module>
+        <module>quarkus-1.7</module>
+        <module>quarkus-1.8</module>
+        <module>quarkus-1.9</module>
         <module>thorntail-2.4</module>
-        <module>wildfly-17</module>
-        <module>wildfly-18</module>
         <module>wildfly-19</module>
+        <module>wildfly-20</module>
+        <module>wildfly-21</module>
         <module>update-checker</module>
     </modules>
 
@@ -76,14 +78,14 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>1.5.8</asciidoctor.plugin.version>
-        <build-helper.plugin.version>3.1.0</build-helper.plugin.version>
+        <asciidoctor.plugin.version>2.1.0</asciidoctor.plugin.version>
+        <build-helper.plugin.version>3.2.0</build-helper.plugin.version>
         <dependency-check.plugin.version>5.3.2</dependency-check.plugin.version>
-        <docker.plugin.version>0.33.0</docker.plugin.version>
-        <jacoco.plugin.version>0.8.5</jacoco.plugin.version>
+        <docker.plugin.version>0.34.1</docker.plugin.version>
+        <jacoco.plugin.version>0.8.6</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>4.3.1</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.20</swagger-codegen.plugin.version>
+        <openapi-generator.plugin.version>5.0.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.23</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
 
@@ -93,37 +95,38 @@
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
-        <maven.ear.plugin.version>3.0.2</maven.ear.plugin.version>
-        <maven.ejb.plugin.version>3.0.1</maven.ejb.plugin.version>
+        <maven.ear.plugin.version>3.1.0</maven.ear.plugin.version>
+        <maven.ejb.plugin.version>3.1.0</maven.ejb.plugin.version>
         <maven.enforcer.plugin.version>3.0.0-M3</maven.enforcer.plugin.version>
         <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
         <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
-        <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
+        <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
         <maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
-        <maven.shade.plugin.version>3.2.3</maven.shade.plugin.version>
-        <maven.site.plugin.version>3.9.0</maven.site.plugin.version>
+        <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
+        <maven.site.plugin.version>3.9.1</maven.site.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
-        <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
+        <maven.war.plugin.version>3.3.1</maven.war.plugin.version>
 
         <!-- artifact versions -->
-        <apache.commons.lang3.version>3.10</apache.commons.lang3.version>
+        <apache.commons.lang3.version>3.11</apache.commons.lang3.version>
         <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.12</lombok.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <lombok.version>1.18.16</lombok.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <mapstruct.version>1.4.1.Final</mapstruct.version>
         <slf4j.version>1.7.30</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.11.0</jackson-2-version>
-        <jackson-bom.version>2.11.0</jackson-bom.version>
+        <jackson-2-version>2.12.0</jackson-2-version>
+        <jackson-bom.version>2.12.0</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
-        <apache.httpclient.version>4.5.12</apache.httpclient.version>
+        <apache.httpclient.version>4.5.13</apache.httpclient.version>
 
         <!-- Java Expression Language (JSR 341) generally defined; the application servers -->
         <!-- have slightly different version strings (3.0.1-b08-jbossorg-1 and 3.0.1.b08-redhat-1), -->
@@ -131,17 +134,22 @@
         <javax.el.version>3.0.1-b11</javax.el.version>
         <jakarta.el.version>3.0.3</jakarta.el.version>
 
+        <!-- byte code manipulation tools, mostly used for tests, but not exclusively -->
+        <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
+        <asm.version>9.0</asm.version>
+        <byte-buddy.version>1.10.19</byte-buddy.version>
+
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
-        <junit.platform.version>1.6.2</junit.platform.version>
-        <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <junit.platform.version>1.7.0</junit.platform.version>
+        <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>3.3.3</mockito.version>
-        <byte-buddy.version>1.10.10</byte-buddy.version>
-        <equalsverifier.version>3.3</equalsverifier.version>
-        <json.unit.version>2.17.0</json.unit.version>
-        <restassured.version>4.3.0</restassured.version>
-        <wiremock.version>2.26.3</wiremock.version>
+        <mockito.version>3.6.28</mockito.version>
+        <equalsverifier.version>3.5</equalsverifier.version>
+        <json.unit.version>2.22.0</json.unit.version>
+        <jsonassert.version>1.5.0</jsonassert.version>
+        <restassured.version>4.3.3</restassured.version>
+        <wiremock.version>2.27.2</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -218,6 +226,12 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-mapstruct-binding</artifactId>
+                <version>${lombok-mapstruct-binding.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
@@ -273,6 +287,41 @@
                         <groupId>commons-logging</groupId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <!-- must have a managed byte-buddy dependency because wildfly manages it as well -->
+                <!-- (with a quite old version, breaking some mockito tests) -->
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
+            </dependency>
+            <dependency>
+                <!-- mockito depends on byte-buddy-agent -->
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${byte-buddy.version}</version>
+            </dependency>
+            <dependency>
+                <!-- must have managed asm dependencies to make sure we use a version compatible with byte-buddy -->
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${asm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-util</artifactId>
+                <version>${asm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-tree</artifactId>
+                <version>${asm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-analysis</artifactId>
+                <version>${asm.version}</version>
             </dependency>
 
             <!-- testing -->
@@ -347,14 +396,6 @@
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <!-- must have a managed byte-buddy test-dependency because wildfly-17 manages it -->
-                <!-- as well with a quite old version (breaking some mockito tests) -->
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy</artifactId>
-                <version>${byte-buddy.version}</version>
-                <scope>test</scope>
-            </dependency>
 
             <dependency>
                 <groupId>nl.jqno.equalsverifier</groupId>
@@ -367,6 +408,12 @@
                 <groupId>net.javacrumbs.json-unit</groupId>
                 <artifactId>json-unit</artifactId>
                 <version>${json.unit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.skyscreamer</groupId>
+                <artifactId>jsonassert</artifactId>
+                <version>${jsonassert.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
