--- a/quarkus-1.6/pom.xml
+++ b/quarkus-1.6/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-1.5</artifactId>
+    <artifactId>quarkus-1.6</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>1.5.2.Final</quarkus.version>
+        <quarkus.version>1.6.1.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -49,27 +49,27 @@
         <mp.reactive-messaging.version>1.0</mp.reactive-messaging.version>
         <mp.reactive-streams-operators.version>1.0.1</mp.reactive-streams-operators.version>
         <mp.rest-client.version>1.4.1</mp.rest-client.version>
-        <smallrye.config.version>1.7.0</smallrye.config.version>
+        <smallrye.config.version>1.8.4</smallrye.config.version>
         <smallrye.context-propagation.version>1.0.13</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>4.2.0</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>1.0.3</smallrye.graphql.version>
+        <smallrye.fault-tolerance.version>4.3.0</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>1.0.4</smallrye.graphql.version>
         <smallrye.health.version>2.2.1</smallrye.health.version>
         <smallrye.jwt.version>2.1.2</smallrye.jwt.version>
         <smallrye.metrics.version>2.4.2</smallrye.metrics.version>
-        <smallrye.openapi.version>1.2.4</smallrye.openapi.version>
+        <smallrye.openapi.version>2.0.3</smallrye.openapi.version>
         <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
-        <smallrye.reactive-converter-api.version>1.0.12</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>2.0.3</smallrye.reactive-messaging.version>
-        <smallrye.reactive-streams-operators.version>1.0.12</smallrye.reactive-streams-operators.version>
+        <smallrye.reactive-converter-api.version>1.0.13</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-messaging.version>2.1.1</smallrye.reactive-messaging.version>
+        <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- opentracing tracer implementation -->
         <io.opentracing.version>0.31.0</io.opentracing.version>
         <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
-        <io.jaegertracing.version>0.34.0</io.jaegertracing.version>
+        <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
         <!-- Artifact versions provided by Quarkus 1.5.x -->
-        <resteasy.version>4.5.3.Final</resteasy.version>
+        <resteasy.version>4.5.5.Final</resteasy.version>
         <apache.httpclient.version>4.5.12</apache.httpclient.version>
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
@@ -81,7 +81,7 @@
         <jackson-bom.version>2.10.4</jackson-bom.version>
 
         <infinispan.version>10.1.5.Final</infinispan.version>
-        <hibernate.version>5.4.16.Final</hibernate.version>
+        <hibernate.version>5.4.18.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
@@ -266,6 +266,10 @@
                     <version>${smallrye.fault-tolerance.version}</version>
                     <exclusions>
                         <exclusion>
+                            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+                            <artifactId>microprofile-fault-tolerance-api</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
@@ -275,12 +279,6 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-graphql-cdi</artifactId>
                     <version>${smallrye.graphql.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -329,7 +327,7 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
-                    <artifactId>smallrye-open-api</artifactId>
+                    <artifactId>smallrye-open-api-core</artifactId>
                     <version>${smallrye.openapi.version}</version>
                     <exclusions>
                         <exclusion>
@@ -382,6 +380,12 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-reactive-messaging-provider</artifactId>
                     <version>${smallrye.reactive-messaging.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
