--- a/quarkus-1.7/pom.xml
+++ b/quarkus-1.7/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-1.3</artifactId>
+    <artifactId>quarkus-1.7</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>1.3.2.Final</quarkus.version>
+        <quarkus.version>1.7.1.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -40,53 +40,62 @@
         <mp.config.version>1.4</mp.config.version>
         <mp.context-propagation.version>1.0.1</mp.context-propagation.version>
         <mp.fault-tolerance.version>2.1</mp.fault-tolerance.version>
+        <mp.graphql.version>1.0.2</mp.graphql.version>
         <mp.health.version>2.2</mp.health.version>
         <mp.jwt.version>1.1.1</mp.jwt.version>
         <mp.metrics.version>2.3</mp.metrics.version>
         <mp.openapi.version>1.1.2</mp.openapi.version>
         <mp.opentracing.version>1.3.3</mp.opentracing.version>
         <mp.reactive-messaging.version>1.0</mp.reactive-messaging.version>
-        <mp.reactive-streams-operators.version>1.0</mp.reactive-streams-operators.version>
+        <mp.reactive-streams-operators.version>1.0.1</mp.reactive-streams-operators.version>
         <mp.rest-client.version>1.4.1</mp.rest-client.version>
-        <smallrye.config.version>1.7.0</smallrye.config.version>
-        <smallrye.context-propagation.version>1.0.11</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>4.1.1</smallrye.fault-tolerance.version>
-        <smallrye.health.version>2.2.0</smallrye.health.version>
-        <smallrye.jwt.version>2.1.1</smallrye.jwt.version>
-        <smallrye.metrics.version>2.4.1</smallrye.metrics.version>
-        <smallrye.openapi.version>1.2.1</smallrye.openapi.version>
+        <smallrye.common.version>1.1.0</smallrye.common.version>
+        <smallrye.config.version>1.8.5</smallrye.config.version>
+        <smallrye.context-propagation.version>1.0.13</smallrye.context-propagation.version>
+        <smallrye.fault-tolerance.version>4.3.0</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>1.0.7</smallrye.graphql.version>
+        <smallrye.health.version>2.2.3</smallrye.health.version>
+        <smallrye.jwt.version>2.2.0</smallrye.jwt.version>
+        <smallrye.metrics.version>2.4.2</smallrye.metrics.version>
+        <smallrye.openapi.version>2.0.7</smallrye.openapi.version>
         <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
-        <smallrye.reactive-converter-api.version>1.0.10</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>1.1.0</smallrye.reactive-messaging.version>
-        <smallrye.reactive-streams-operators.version>1.0.10</smallrye.reactive-streams-operators.version>
+        <smallrye.reactive-converter-api.version>1.1.0</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-messaging.version>2.3.0</smallrye.reactive-messaging.version>
+        <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- opentracing tracer implementation -->
         <io.opentracing.version>0.31.0</io.opentracing.version>
         <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
-        <io.jaegertracing.version>0.34.0</io.jaegertracing.version>
+        <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
-        <!-- Artifact versions provided by Quarkus 1.3.x -->
-        <resteasy.version>4.5.3.Final</resteasy.version>
-        <apache.httpclient.version>4.5.11</apache.httpclient.version>
+        <!-- Artifact versions provided by Quarkus 1.5.x -->
+        <resteasy.version>4.5.6.Final</resteasy.version>
+        <apache.httpclient.version>4.5.12</apache.httpclient.version>
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
         <jakarta.json.bind.version>1.0.2</jakarta.json.bind.version>
-        <yasson.version>1.0.6</yasson.version>
+        <yasson.version>1.0.8</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.10.2</jackson-2-version>
-        <jackson-bom.version>2.10.2</jackson-bom.version>
+        <jackson-2-version>2.11.2</jackson-2-version>
+        <jackson-bom.version>2.11.2</jackson-bom.version>
 
-        <infinispan.version>10.1.5.Final</infinispan.version>
-        <hibernate.version>5.4.14.Final</hibernate.version>
+        <infinispan.version>11.0.3.Final</infinispan.version>
+        <hibernate.version>5.4.19.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <hibernate.validator.version>6.1.2.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
+
+        <!-- we encountered IllegalArgumentException: Unsupported api in ASM code when -->
+        <!-- ASM/Byte-Buddy versions didn't match -->
+        <asm.version>8.0.1</asm.version>
+        <!-- last byte-buddy version using ASM 8.0.1 -->
+        <byte-buddy.version>1.10.15</byte-buddy.version>
     </properties>
 
     <dependencyManagement>
@@ -162,6 +171,11 @@
                     </exclusions>
                 </dependency>
                 <dependency>
+                    <groupId>org.eclipse.microprofile.graphql</groupId>
+                    <artifactId>microprofile-graphql-api</artifactId>
+                    <version>${mp.graphql.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.eclipse.microprofile.health</groupId>
                     <artifactId>microprofile-health-api</artifactId>
                     <version>${mp.health.version}</version>
@@ -232,6 +246,11 @@
                     <version>${mp.rest-client.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>io.smallrye.common</groupId>
+                    <artifactId>smallrye-common-annotation</artifactId>
+                    <version>${smallrye.common.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>io.smallrye.config</groupId>
                     <artifactId>smallrye-config</artifactId>
                     <version>${smallrye.config.version}</version>
@@ -259,10 +278,19 @@
                     <version>${smallrye.fault-tolerance.version}</version>
                     <exclusions>
                         <exclusion>
+                            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+                            <artifactId>microprofile-fault-tolerance-api</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
                     </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-graphql-cdi</artifactId>
+                    <version>${smallrye.graphql.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -311,7 +339,7 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
-                    <artifactId>smallrye-open-api</artifactId>
+                    <artifactId>smallrye-open-api-core</artifactId>
                     <version>${smallrye.openapi.version}</version>
                     <exclusions>
                         <exclusion>
@@ -364,6 +392,12 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-reactive-messaging-provider</artifactId>
                     <version>${smallrye.reactive-messaging.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -420,16 +454,6 @@
                     <artifactId>yasson</artifactId>
                     <version>${yasson.version}</version>
                 </dependency>
-                <!--
-                                <dependency>
-                                    <groupId>com.fasterxml.jackson.core</groupId>
-                                    <artifactId>jackson-core</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>com.fasterxml.jackson.datatype</groupId>
-                                    <artifactId>jackson-datatype-jsr310</artifactId>
-                                </dependency>
-                -->
                 <dependency>
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-core</artifactId>
@@ -458,6 +482,10 @@
                         <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>javax.activation</groupId>
+                            <artifactId>javax.activation-api</artifactId>
                         </exclusion>
                         <exclusion>
                             <groupId>javax.xml.bind</groupId>
